[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Redkost Comic.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Some Time Later.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Textures/SplashImage.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Menu_GameStart.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 99
outline_size = 2
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 23
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Menu_GameStart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0156863, 0, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 154.841
margin_top = 79.9413
margin_right = 1142.84
margin_bottom = 519.941
texture = ExtResource( 3 )
stretch_mode = 5

[node name="GameStartLabel" type="Label" parent="."]
margin_top = 3.0
margin_right = 1280.0
margin_bottom = 169.0
custom_colors/font_color = Color( 0.933333, 0.564706, 0.0509804, 1 )
custom_fonts/font = SubResource( 1 )
text = "A-Maze-Balls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HowToPlayBtn" type="Button" parent="."]
margin_left = 1099.43
margin_top = 15.8591
margin_right = 1265.43
margin_bottom = 46.8591
custom_colors/font_color = Color( 0.741176, 0.776471, 1, 1 )
custom_colors/font_color_hover = Color( 0.737255, 0.47451, 1, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.607843, 0.0392157, 1 )
custom_fonts/font = SubResource( 2 )
text = "How To Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameBtn" type="Button" parent="."]
margin_left = 506.0
margin_top = 537.0
margin_right = 809.0
margin_bottom = 591.0
custom_colors/font_color = Color( 0.819608, 0.917647, 0.745098, 1 )
custom_colors/font_color_hover = Color( 0.552941, 0.984314, 0.113725, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.607843, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "New Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueBtn" type="Button" parent="."]
margin_left = 505.0
margin_top = 594.74
margin_right = 810.0
margin_bottom = 648.74
custom_colors/font_color = Color( 0.929412, 0.941176, 0.584314, 1 )
custom_colors/font_color_hover = Color( 0.905882, 0.878431, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.607843, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "Continue "
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameBtn" type="Button" parent="."]
margin_left = 506.0
margin_top = 650.0
margin_right = 809.0
margin_bottom = 704.0
custom_colors/font_color = Color( 0.988235, 0.635294, 0.654902, 1 )
custom_colors/font_color_hover = Color( 0.85098, 0.0392157, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.607843, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HowToPlayBtn" to="." method="_on_HowToPlayBtn_pressed"]
[connection signal="pressed" from="NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="QuitGameBtn" to="." method="_on_QuitGameBtn_pressed"]
